# numcodecs

./: .coveragerc  .flake8  .gitignore  .gitmodules  .lgtm.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  cpuinfo.py  meson.build  meson.options  pyproject.toml  pytest.ini  release.txt  requirements.txt  requirements_dev.txt  requirements_rtfd.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  labeler.yml
.github/workflows/: ci-emscripten.yaml  ci-i386.yml  ci-linux.yaml  ci-osx.yaml  ci-windows.yaml  ci.yaml  codeql-analysis.yml  needs-release-notes.yaml  wheel-aarch64.yaml  wheel.yaml
adhoc/: blosc_memleak_check.py
docs/: Makefile  abc.md  abc.rst  api.md  api.rst  astype.rst  bitinfo.rst  bitround.rst  blosc.rst  bz2.rst  categorize.rst  checksum32.md  checksum32.rst  conf.py  contributing.md  contributing.rst  delta.rst  fixedscaleoffset.rst  index.md  index.rst  lz4.rst  lzma.rst  msgpacks.rst  packbits.rst  pcodec.rst  pickles.rst  quantize.rst  registry.md  registry.rst  release.md  release.rst  szip.rst  vlen.rst  zarr3.md  zarr3.rst  zfp.rst  zfpy.rst  zlib.rst  zstd.rst
docs/compression/: blosc.md  blosc.rst  bz2.md  bz2.rst  gzip.md  gzip.rst  index.md  index.rst  lz4.md  lz4.rst  lzma.md  pcodec.md  zfpy.md  zlib.md  zlib.rst  zstd.md  zstd.rst
docs/design/: meson-python-migration.md
docs/filter/: astype.md  astype.rst  bitround.md  categorize.md  categorize.rst  delta.md  delta.rst  fixedscaleoffset.md  fixedscaleoffset.rst  index.md  index.rst  packbits.md  packbits.rst  quantize.md  quantize.rst  shuffle.md  shuffle.rst
docs/other/: crc32c.rst  index.md  index.rst  json.md  json.rst  msgpacks.md  msgpacks.rst  pickles.md  pickles.rst  vlen.md  vlen.rst
fixture/adler32/: array.02.npy  array.03.npy  array.05.npy  array.06.npy  array.11.npy  array.12.npy
fixture/base64/: array.02.npy  array.03.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy  array.08.npy  array.09.npy  array.10.npy  array.11.npy  array.12.npy
fixture/blosc/: array.00.npy  array.02.npy  array.03.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy  array.08.npy  array.09.npy  array.10.npy  array.11.npy  array.12.npy
fixture/bz2/: array.02.npy  array.03.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy  array.08.npy  array.09.npy  array.10.npy  array.11.npy  array.12.npy
fixture/crc32/: array.04.npy  array.07.npy  array.08.npy  array.09.npy  array.10.npy
fixture/crc32c/: array.02.npy  array.03.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy  array.08.npy  array.09.npy  array.10.npy  array.11.npy  array.12.npy
fixture/fixedscaleoffset/: array.00.npy  array.01.npy  array.02.npy  array.03.npy  array.04.npy
fixture/gzip/: array.02.npy  array.03.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy  array.08.npy  array.09.npy  array.10.npy  array.11.npy  array.12.npy
fixture/json/: array.05.npy
fixture/json2/: array.01.npy  array.02.npy  array.04.npy  array.05.npy  array.07.npy  array.08.npy
fixture/lz4/: array.02.npy  array.03.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy  array.08.npy  array.09.npy  array.10.npy  array.11.npy  array.12.npy
fixture/lzma/: array.02.npy  array.03.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy  array.08.npy  array.09.npy  array.10.npy  array.11.npy  array.12.npy
fixture/msgpack/: array.00.npy
fixture/msgpack2/: array.00.npy  array.01.npy  array.02.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy  array.08.npy  array.09.npy  array.10.npy
fixture/packbits/: array.00.npy  array.01.npy  array.02.npy  array.03.npy
fixture/pcodec/: array.00.npy  array.01.npy  array.02.npy  array.03.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy  array.08.npy  array.09.npy
fixture/pickle/: array.06.npy
fixture/quantize/: array.00.npy  array.01.npy  array.02.npy  array.03.npy  array.04.npy
fixture/shuffle/: array.02.npy  array.03.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy  array.08.npy  array.09.npy  array.10.npy  array.11.npy  array.12.npy
fixture/vlen-array/: array.00.npy  array.01.npy
fixture/vlen-bytes/: array.00.npy  array.01.npy  array.02.npy  array.03.npy
fixture/vlen-ndarray/: array.00.npy  array.01.npy
fixture/vlen-utf8/: array.02.npy  array.03.npy
fixture/zfpy/: array.02.npy  array.03.npy  array.04.npy  array.05.npy  array.06.npy  array.07.npy
fixture/zlib/: array.02.npy  array.03.npy  (+9 more)
notebooks/: benchmark_strings.ipynb  benchmark_vlen.ipynb
numcodecs/: __init__.py  _fletcher.c  _shuffle.c  _shuffle.pyx  _utils.pxd  _zarr3.py  abc.py  astype.py  base64.py  bitinfo.py  bitround.py  blosc.c  blosc.py  blosc.pyx  blosc2.pyx  blosc_v2.py  bz2.py  categorize.py  checksum32.py  compat.py  compat_ext.c  compat_ext.pxd  compat_ext.pyx  crc32c_.py  delta.py  errors.py  fixedscaleoffset.py  fletcher32.pyx  gzip.py  jenkins.pyx  json.py  jsons.py  lz4.c  lz4.py  lz4.pyx  lzma.py  msgpacks.py  ndarray_like.py  packbits.py  pcodec.py  (+23 more)
src/numcodecs/: __init__.py  abc.py  blosc.pyx  checksum32.py  compat_ext.pxd  compat_ext.pyx  lz4.pyx  meson.build  pcodec.py  version.py  vlen.pyx  zstd.pyx
src/numcodecs/_build_utils/: gitversion.py
tests/: __init__.py  blosc810_findings.md  common.py  reproduce_blosc810.py  test_astype.py  test_base64.py  test_bitround.py  test_blosc.py  test_bz2.py  test_categorize.py  test_checksum32.py  test_compat.py  test_delta.py  test_entrypoints.py  test_entrypoints_backport.py  test_fixedscaleoffset.py  test_fletcher32.py  test_gzip.py  test_jenkins.py  test_json.py  test_lz4.py  test_lzma.py  test_msgpacks.py  test_ndarray_like.py  test_packbits.py  test_pcodec.py  test_pickles.py  test_pyzstd.py  test_quantize.py  test_registry.py  test_shuffle.py  test_version.py  test_vlen_array.py  test_vlen_bytes.py  test_vlen_utf8.py  test_zarr3.py  test_zarr3_import.py  test_zfpy.py  test_zlib.py  test_zstd.py
(+214 files in other folders)
