[build-system]
requires = [
    "setuptools>=77",
    "setuptools-scm[toml]>=6.2",
    "Cython",
    "py-cpuinfo",
    "numpy>2",
]
build-backend = "setuptools.build_meta"

[project]
name = "numcodecs"
description = """
A Python package providing buffer compression and transformation codecs \
for use in data storage and communication applications."""
readme = "README.rst"
dependencies = ["numpy>=1.24", "typing_extensions"]
requires-python = ">=3.11"
dynamic = [
  "version",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
maintainers = [
    { name = "Alistair Miles", email = "alimanfoo@googlemail.com" },
]
license = "MIT"
license-files = [
    "LICENSE.txt",
    "c-blosc/LICENSE.txt",
    "c-blosc/LICENSES/*",
]

[project.urls]
"Bug Tracker" = "https://github.com/zarr-developers/numcodecs/issues"
Changelog = "https://numcodecs.readthedocs.io/en/stable/release.html"
Documentation = "https://numcodecs.readthedocs.io/"
Homepage = "https://github.com/zarr-developers/numcodecs"

[project.optional-dependencies]
msgpack = [
    "msgpack",
]
zfpy = [
    "zfpy>=1.0.0"
]
pcodec = [
    "pcodec>=0.3,<0.4",
]
crc32c = [
    "crc32c>=2.7",
]
google_crc32c = [
    "google-crc32c>=1.5"
]
docs = [
    "sphinx",
    "sphinx-issues",
    "pydata-sphinx-theme",
    "numpydoc",
]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pyzstd"
]
test_extras = [
    "importlib_metadata",
    "crc32c",  # TODO: remove once zarr-python does not depend on crc32c anymore
]

[dependency-groups]
test-zarr-312 = [
    "pytest",
    "pytest-cov",
    "zarr==3.1.2",
    "crc32c",
]
test-zarr-313 = [
    "pytest",
    "pytest-cov",
    "zarr==3.1.3",
    "crc32c",
]
test-zarr-main = [
    "pytest",
    "pytest-cov",
    "zarr @ git+https://github.com/zarr-developers/zarr-python.git@main",
    "crc32c",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["numcodecs", "numcodecs.tests"]
zip-safe = false

[tool.setuptools.package-data]
numcodecs = [
    "tests/package_with_entrypoint/__init__.py",
    "tests/package_with_entrypoint-0.1.dist-info/entry_points.txt"
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
write_to = "numcodecs/version.py"

[tool.codespell]
skip = "./.git,fixture"
ignore-words-list = "ba, compiletime, hist, nd, unparseable"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: ${PY_MAJOR_VERSION} no cover",
]

[tool.repo-review]
ignore = ["PY005", "PY007", "PP302", "PP308", "PP309", "GH103", "GH212", "PC111", "PC140", "PC160", "PC170", "PC180", "MY100", "RF103"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --cov=numcodecs --cov-report xml --doctest-modules --doctest-glob=*.pyx"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
testpaths = [
    "numcodecs/tests",
]
norecursedirs = [
    ".git",
    ".github",
    ".pytest_cache",
    "adhoc",
    "build",
    "c-blosc",
    "docs",
    "fixture",
    "notebooks",
    "numcodecs.egg-info",
]
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:As the c extension couldn't be imported:RuntimeWarning", # Ignore warning about pure python google_crc32c (on Python 3.14)
]

[tool.cibuildwheel]
environment = { DISABLE_NUMCODECS_AVX2=1 }
[tool.cibuildwheel.macos]
# cibuildwheel uses 3.12 for the Python driver, which supports High Sierra and later
# https://github.com/pypa/cibuildwheel/blob/ee63bf16da6cddfb925f542f2c7b59ad50e93969/action.yml#L31
environment = { MACOSX_DEPLOYMENT_TARGET=10.13, DISABLE_NUMCODECS_AVX2=1, CFLAGS="$CFLAGS -Wno-implicit-function-declaration" }
[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { DISABLE_NUMCODECS_AVX2=1, DISABLE_NUMCODECS_SSE2=1 }

[tool.ruff]
line-length = 100
extend-exclude = ["c-blosc"]
src = ["numcodecs"]

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "EXE",
    "FA",
    "FLY",
    "FURB",
    "G",
    "I",
    "ISC",
    "LOG",
    "PERF",
    "PGH",
    "PIE",
    "PT",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLOT",
    "TID",
    "TRY",
    "UP",
]
ignore = [
    "FURB101",
    "FURB103",
    "PT001",
    "PT011",
    "PT012",
    "RET505",
    "RET506",
    "SIM108",
    "TRY003",
    "TRY301",
    "UP007",
    "UP038",  # https://github.com/astral-sh/ruff/issues/7871
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
]

[tool.ruff.lint.extend-per-file-ignores]
"numcodecs/tests/**" = ["SIM201", "SIM202", "SIM300", "TRY002"]
"notebooks/**" = ["W391"]  # https://github.com/astral-sh/ruff/issues/13763

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
ignore_errors = false
ignore_missing_imports = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
# TODO: set options below to true
strict = false
warn_unreachable = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[tool.uv]
conflicts = [
    # Zarr versions conflict with each other
    [
        { group = "test-zarr-312" },
        { group = "test-zarr-313" },
        { group = "test-zarr-main" }
    ]
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
python = "=3.14"
clang = ">=19.1.7,<20"
c-compiler = ">=1.9.0,<2"
cxx-compiler = ">=1.9.0,<2"
uv = "*"

[tool.pixi.feature.test.pypi-dependencies]
numcodecs = { path = ".", editable = true, extras = ["test","test_extras","msgpack","zfpy"] }

[tool.pixi.feature.test-google-crc32c.pypi-dependencies]
numcodecs = { path = ".", editable = true, extras = ["google_crc32c"] }

[tool.pixi.feature.test-crc32c.pypi-dependencies]
numcodecs = { path = ".", editable = true, extras = ["crc32c"] }

[tool.pixi.environments]
default = { solve-group = "default" }
test = ["test"]
test-crc32c = ["test", "test-crc32c"]
test-google-crc32c = ["test", "test-google-crc32c"]

[tool.pixi.tasks]
ls-deps-312 = "uv run --group test-zarr-312 uv pip freeze"
ls-deps-313 = "uv run --group test-zarr-313 uv pip freeze"
ls-deps-main = "uv run --group test-zarr-main uv pip freeze"
test-zarr-312 = "uv run --group test-zarr-312 pytest --cov=numcodecs --cov-report=xml --cov-report=term numcodecs/tests/test_zarr3.py numcodecs/tests/test_zarr3_import.py"
test-zarr-313 = "uv run --group test-zarr-313 pytest --cov=numcodecs --cov-report=xml --cov-report=term numcodecs/tests/test_zarr3.py numcodecs/tests/test_zarr3_import.py"
test-zarr-main = "uv run --group test-zarr-main pytest --cov=numcodecs --cov-report=xml --cov-report=term numcodecs/tests/test_zarr3.py numcodecs/tests/test_zarr3_import.py"

[tool.pixi.feature.test.tasks]
run-tests = "pytest -v"